gitops/infrastructure/networking/ingressroutes/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.home`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`) || PathPrefix(`/`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-home-tls
